SET(PROJ_NAME bs_signer_gui)
PROJECT(${PROJ_NAME})

configure_file(../../SignerVersion.h.in SignerVersion.h)

FILE(GLOB SOURCES *.cpp)
LIST(APPEND SOURCES
   ../../AuthProxy.cpp
   ../../PasswordConfirmValidator.cpp
   ../../PdfBackupQmlPrinter.cpp
   ../../QmlFactory.cpp
   ../../QmlBridge.cpp
   ../../QMLStatusUpdater.cpp
   ../../SignerAdapter.cpp
   ../../SignerAdapterContainer.cpp
   ../../SignerInterfaceListener.cpp
   ../../SignerSettings.cpp
   ../../TXInfo.cpp
   ../../WalletsProxy.cpp
   ../../HeadlessSettings.cpp
)

FILE(GLOB HEADERS *.h)
LIST(APPEND HEADERS
   ../../AuthProxy.h
   ../../PasswordConfirmValidator.h
   ../../PdfBackupQmlPrinter.h
   ../../QmlFactory.h
   ../../QmlBridge.h
   ../../QmlCallbackImpl.h
   ../../QMLStatusUpdater.h
   ../../SignerAdapter.h
   ../../SignerAdapterContainer.h
   ../../SignerInterfaceListener.h
   ../../SignerSettings.h
   ../../TXInfo.h
   ../../WalletsProxy.h
)

FILE(GLOB RESOURCE_FILES ../../*.qrc)

INCLUDE_DIRECTORIES( ../.. )
INCLUDE_DIRECTORIES( ${COMMON_LIB_INCLUDE_DIR} )
INCLUDE_DIRECTORIES( ${COMMON_UI_LIB_INCLUDE_DIR} )
INCLUDE_DIRECTORIES( ${BLOCKSETTLE_UI_INCLUDE_DIR} )
INCLUDE_DIRECTORIES( ${BS_NETWORK_INCLUDE_DIR} )
INCLUDE_DIRECTORIES( ${BS_COMMON_ENUMS_INCLUDE_DIR} )
INCLUDE_DIRECTORIES( ${BS_COMMUNICATION_INCLUDE_DIR} )
INCLUDE_DIRECTORIES( ${BS_STORAGE_INCLUDE_DIR} )
INCLUDE_DIRECTORIES( ${WALLET_LIB_INCLUDE_DIR} )
INCLUDE_DIRECTORIES( ${CRYPTO_LIB_INCLUDE_DIR} )
INCLUDE_DIRECTORIES( ${PATH_TO_GENERATED} )
INCLUDE_DIRECTORIES( ${NETTY_INCLUDE_DIR} )
INCLUDE_DIRECTORIES( ${BS_TERMINAL_API_INCLUDE_DIR} )
INCLUDE_DIRECTORIES( ${MARKET_ENUMS_INCLUDE_DIR} )
INCLUDE_DIRECTORIES( ${Qt5DBus_INCLUDE_DIRS} )
INCLUDE_DIRECTORIES( ${BOTAN_INCLUDE_DIR} )

qt5_add_resources( GENERATED_RESOURCES ${RESOURCE_FILES})
qt5_add_resources( GENERATED_RESOURCES ${BLOCKSETTLE_UI_INCLUDE_DIR}/armory.qrc)

IF ( APPLE )
    SET( BUNDLE_NAME "BlockSettle Signer GUI" )

    SET( MACOSX_BUNDLE_BUNDLE_NAME ${BUNDLE_NAME} )
    SET( MACOSX_BUNDLE_GUI_IDENTIFIER "com.blocksettle.signer.gui" )
    SET( MACOSX_BUNDLE_BUNDLE_VERSION ${BS_VERSION_STRING})
    SET( MACOSX_BUNDLE_SHORT_VERSION_STRING ${BS_VERSION_STRING})
    SET( MACOSX_BUNDLE_LONG_VERSION_STRING ${BS_VERSION_STRING})

    SET( MACOSX_BUNDLE_ICON_FILE "blocksettle_signer.icns" )

    SET(BS_SIGNER_ICNS_FILE "blocksettle_signer.icns")

    SET_SOURCE_FILES_PROPERTIES(${BS_SIGNER_ICNS_FILE} PROPERTIES MACOSX_PACKAGE_LOCATION Resources)
    ADD_EXECUTABLE(${PROJ_NAME} MACOSX_BUNDLE ${SOURCES} ${HEADERS} ${GENERATED_RESOURCES} ${BS_SIGNER_ICNS_FILE})
    SET_TARGET_PROPERTIES(${PROJ_NAME} PROPERTIES OUTPUT_NAME "${BUNDLE_NAME}")
ELSEIF ( WIN32 )
    ADD_EXECUTABLE(${PROJ_NAME} WIN32 ${SOURCES} ${HEADERS} ${GENERATED_RESOURCES})
ELSE ()
    ADD_EXECUTABLE(${PROJ_NAME} ${SOURCES} ${HEADERS} ${GENERATED_RESOURCES})
ENDIF ()

TARGET_LINK_LIBRARIES(${PROJ_NAME}
   ${BLOCKSETTLE_UI_LIBRARY_NAME}
   ${BS_NETWORK_LIB_NAME}
   ${CPP_WALLET_LIB_NAME}
   ${CRYPTO_LIB_NAME}
   ${BOTAN_LIB}
   ${ZMQ_LIB}
   ${WS_LIB}
   ${QRENCODE_LIB}
   ${QT_LINUX_LIBS}
   ${QT_QUICK_LIBS}
   Qt5::Qml
   Qt5::Quick
   Qt5::Gui
   Qt5::DBus
   Qt5::Network
   Qt5::PrintSupport
   Qt5::Core
   ${QT_LIBS}
   ${OS_SPECIFIC_LIBS}
   ${OPENSSL_LIBS}
)
